Move the directory

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- METADATA -->
   <title>CSCI 1270 - Database Management Systems</title>
-  <link rel="shortcut icon" type="image/png" href="img/bee.svg" />
+  <link rel="shortcut icon" type="image/png" href="main_website/img/bee.svg" />
   <meta property="og:image" content="static/img/preview.png" />
   <meta name="author" content="CSCI 1270 Course Staff" />
   <meta name="description" content="Brown University CSCI 1270 - Database Management Systems, Fall 2021" />
@@ -15,13 +15,13 @@
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
   <!-- CSS -->
-  <link href="css/normalize.css" rel="stylesheet" type="text/css" />
-  <link href="css/new_website.css" rel="stylesheet" type="text/css" />
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="main_website/css/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="main_website/css/new_website.css" rel="stylesheet" type="text/css" />
+  <link href="main_website/css/style.css" rel="stylesheet" type="text/css" />
 
   <!-- JS -->
-  <script defer src="js/jquery.min.js"></script>
-  <script defer src="js/script.js"></script>
+  <script defer src="main_website/js/jquery.min.js"></script>
+  <script defer src="main_website/js/script.js"></script>
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
